--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
 #module caches
-src/__pycache__/*
-__pycache__/*
+#src/__pycache__/*
+**/__pycache__/**
 
 data/*
 
 # Virtual env files
 .venv/**
 env/**
+results/**
+
+# specific test file
+scripts/test.ipynb
+scripts/test.py
 
 # Compiled source #
 ###################
