--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,12 @@
 
 data/*
 
+
 # Virtual env files
 .venv/**
 env/**
 results/**
+*.pth
 
 # specific test file
 scripts/generate_dataset/test.ipynb
