--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
+contourpy==1.2.0
+cycler==0.12.1
+Cython==3.0.8
 filelock==3.13.1
+fonttools==4.49.0
 fsspec==2024.2.0
+h5py==3.10.0
 Jinja2==3.1.3
+kiwisolver==1.4.5
 MarkupSafe==2.1.5
+matplotlib==3.8.3
 mpmath==1.3.0
 networkx==3.2.1
+numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
@@ -16,7 +24,18 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
+packaging==23.2
+pandas==2.2.1
+pillow==10.2.0
+pybind11==2.11.1
+pyparsing==3.1.1
+pyroomacoustics==0.7.3
+python-dateutil==2.8.2
+pytz==2024.1
+scipy==1.12.0
+six==1.16.0
 sympy==1.12
 torch==2.2.1
 triton==2.2.0
 typing_extensions==4.9.0
+tzdata==2024.1
